[project]
name = "Class163_NexT"
version = "0.1.0"
description = "Download musics from the offical API of Netease Music."
requires-python = ">=3.13"
dependencies = [
    "netease-encode-api>=1.2.0",
    "selenium>=4.35.0",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
